@startuml
class kr.spring.interceptor.LoginCheckInterceptor {
+ boolean preHandle(HttpServletRequest,HttpServletResponse,Object)
}

class kr.spring.interceptor.MemStatusCheckInterceptor {
+ boolean preHandle(HttpServletRequest,HttpServletResponse,Object)
}

class kr.spring.interceptor.WriterCheckInterceptor {
- CSService csService
+ boolean preHandle(HttpServletRequest,HttpServletResponse,Object)
}




org.springframework.web.servlet.HandlerInterceptor <|.. kr.spring.interceptor.LoginCheckInterceptor
org.springframework.web.servlet.HandlerInterceptor <|.. kr.spring.interceptor.MemStatusCheckInterceptor
org.springframework.web.servlet.HandlerInterceptor <|.. kr.spring.interceptor.WriterCheckInterceptor
@enduml